--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>ReduxStore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
